public class Main {
    public static void main(String[] args) {


        Shape s1= new Circle("red", false, 5.5);
        System.out.println(s1);

        Shape s3 = new Rectangle("red",false, 1.0, 2.0);
        System.out.println(s3);

        Shape s4 = new Square(6.6);
        System.out.println(s4);


        }

}

